# sae

./: .cursorrules  .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_sae_loading.py
configs/: concept_config.yaml  current_config.yaml  current_pace_config.yaml  gemma-2-2b_pile-uncopyrighted_absolutekSAE.yaml  gemma2_2b.yaml  gpt2_pile-uncopyrighted_batchtopkSAE.yaml  gpt2_pile-uncopyrighted_jumpreluSAE.yaml  pace_1m.yaml  pythia-70m_openwebtext_topkSAE.yaml  pythia-70m_pile-uncopyrighted_absolutekSAE.yaml  pythia-70m_pile-uncopyrighted_batchabsolutekSAE.yaml  pythia-70m_pile-uncopyrighted_batchtopkSAE.yaml  pythia-70m_pile-uncopyrighted_jumpreluSAE.yaml  pythia-70m_pile-uncopyrighted_topkSAE.yaml  quick_test.yaml
logs/example/: events.out.tfevents.1752118567.xzAscC.324957.0
scripts/: absolutek_training.sh  example.py  gemma_jumprelu.sh  gpt_pythia_jumprelu.sh  k_selection_topk.sh  pythia_absolutek.sh  pythia_topk.sh  qwen_jumprelu.sh  retraining.sh  topk_gemma2_2b.sh  topk_gemma2_2b_k.sh  topk_gpt2small.sh  topk_multiple_models.sh  topk_pythia70m.sh  topk_pythia70m_k.sh  topk_qwen3_4b.sh  topk_training.sh  train_absolute_topk_sae.py  train_pace_sae.py  train_topk_sae.py  trainer_Qwen3-4B-Thinking-2507_Layer18_topkSAE_axbench-concept16k_v2.yaml  trainer_gpt2_Layer6_topkSAE_axbench-concept16k_v2.yaml  trainer_pythia-70m_Layer3_absolutekSAE_pile-uncopyrighted.yaml  trainer_pythia-70m_Layer3_topkSAE_axbench-concept16k_v2.yaml  trainer_pythia-70m_Layer3_topkSAE_axbench-concept1k_v2.yaml  trainer_pythia-70m_Layer3_topkSAE_pile-uncopyrighted.yaml  trainer_pythia-70m_Layer4_topkSAE_axbench-concept16k_v2.yaml
src/: README.md  __init__.py  data.py  diff_sae.py  evaluation.py  extract_dim_pca.py  sae.py  trainer.py  utils.py  vis_compare_core_evaluation.py  we_cs.py
src/SupervisedMethods/: __init__.py  extract_dim_pca.py
src/Top_AbsoluteK/: __init__.py  data.py  mse_sparisty_tradeoff.py  sae.py  trainer.py
src/topk_sae/: __init__.py
src/topk_sae/config/: __init__.py  config.py
src/topk_sae/data/: __init__.py  concept_data_loader.py  data_loader.py
src/topk_sae/models/: __init__.py  absolute_topk_sae.py  topk_sae.py
src/topk_sae/training/: __init__.py  trainer.py
src/topk_sae/utils/: __init__.py
tests/: test_topk_sae.py
tests/SupervisedMethods/: test_extract_dim_pca.py
