[project]
name = "sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "mlflow>=3.3.1",
    "nnsight>=0.4.11",
    "pandas>=2.3.1",
    "sae-lens>=6.6.0",
    "safetensors>=0.4.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
