[project]
name = "sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.4",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "ipynb>=0.5.1",
    "loguru>=0.7.3",
    "mlflow>=3.3.1",
    "nnsight>=0.4.11",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "sae-lens>=6.6.0",
    "safetensors>=0.4.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
